# rosnav-rl

./: .gitignore  CMakeLists.txt  README.md  package.xml  rosnav_local_planner_plugin.xml  setup.py
agents/AGENT_1/: training_config.yaml
agents/AGENT_2/: training_config.yaml
agents/AGENT_3/: training_config.yaml
agents/AGENT_4/: training_config.yaml
agents/AGENT_5/: training_config.yaml
agents/burger/: hyperparameters.json
agents/jackal/: hyperparameters.json
agents/jackal_AGENT_23_RobotSpecificEncoder_2023_05_11__00_44_23/: hyperparameters.json
agents/jackal_AGENT_24_2024_07_12__02_59_28/: training_config.yaml
agents/jackal_AGENT_31_StackedEncoder_2023_05_15__18_02_04/: training_config.yaml
agents/jackal_RosnavResNet_2024_07_01__17_14_33/: training_config.yaml
agents/jackal_RosnavResNet_2024_07_14__01_34_35/: training_config.yaml
agents/jackal_RosnavResNet_2_2024_01_13__17_16_40/: training_config.yaml  vec_normalize.pkl
agents/jackal_RosnavResNet_3_2024_01_22__07_05_11/: training_config.yaml  vec_normalize_best_model.pkl  vec_normalize_last_model.pkl
agents/jackal_RosnavResNet_3_2024_03_31__03_23_33/: vec_normalize_last_model.pkl
agents/jackal_RosnavResNet_5_2024_02_06__23_35_22/: training_config.yaml  vec_normalize_best_model.pkl  vec_normalize_last_model.pkl
agents/jackal_RosnavResNet_5_norm_2024_03_23__21_02_24/: training_config.yaml
agents/jackal_RosnavResNet_6_norm_2024_04_24__06_36_30/: training_config.yaml
agents/jackal_RosnavResNet_8_norm_2024_04_28__03_44_35/: training_config.yaml
agents/jackal_RosnavResNet__1_2024_07_07__19_56_08/: training_config.yaml
agents/jackal_RosnavResNet__1_2024_08_17__08_49_54/: training_config.yaml
agents/jackal_RosnavResNet_mid_2024_06_12__08_12_03/: training_config.yaml
agents/jackal_RosnavResNet_mid_2_2024_06_30__19_41_14/: training_config.yaml
agents/jackal_RosnavResNet_simple_2024_05_23__07_08_51/: training_config.yaml
agents/jackal_RosnavResNet_simple_2024_05_27__15_29_28/: training_config.yaml
agents/jackal_marl/: hyperparameters.json
agents/new_jackal/: hyperparameters.json
agents/ridgeback/: hyperparameters.json
agents/ridgeback_marl/: hyperparameters.json
agents/rto/: hyperparameters.json
agents/rto_tlabs/: hyperparameters.json
agents/rto_tlabs_marl/: hyperparameters.json
cfg/: RosnavLocalPlannerReconfigure.cfg
include/: rosnav.h  rosnav_config.h  rosnav_local_planner.h
msg/: ResetStackedObs.msg
rosnav/: node.py
rosnav/model/: agent_factory.py  base_agent.py  constants.py  custom_policy.py  custom_policy_from_json.py  custom_sb3_policy.py  feature_extractors.py
rosnav/model_space_manager/: model_space_manager.py
rosnav/rosnav_space_manager/: base_space_encoder.py  default_encoder.py  encoder_factory.py  reduced_encoder.py  reduced_laser_encoder.py  resnet_space_encoder.py  robot_specific_encoder.py  rosnav_space_manager.py  stacked_encoder.py  stacked_reduced_laser_encoder.py  stacked_space_encoder.py  uniform_encoder.py  (+1 more)
rosnav_local_planner/: CMakeLists.txt  package.xml  rosnav_local_planner_plugin.xml
rosnav_rl/: rl_agent.py
scripts/: rosnav_node.py
src/: RosnavLocalPlanner.cpp  rosnav_config.cpp  rosnav_local_planner.cpp
srv/: GetAction.srv
(+134 files in other folders)
